apps/bookinfo/gateway/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: bookinfo-gateway-istio
    weight: 100
  wildcardPolicy: None
